# vt-ndarray

./: .editorconfig  .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: ci.yml
benchmark/vt/ndarray/: foreach_benchmark.cpp  matrix_mul_benchmark.cpp
doc/vt/ndarray/: readme.md
doc/vt/ndarray/allocator/: align-val.md  allocate.md  cache-line-size.md  construct.md  constructor.md  deallocate.md  destroy.md  equals-operator.md  readme.md
doc/vt/ndarray/compatible-range/: readme.md
doc/vt/ndarray/container/: assign-operator.md  begin.md  constructor.md  data.md  deduction-guides.md  destructor.md  element-count.md  end.md  equals-operator.md  flatten.md  free-swap.md  get_allocator.md  index-operator.md  rbegin.md  readme.md  rend.md  reshape.md  shape.md  slice.md  stream-operator.md  swap.md  view.md
doc/vt/ndarray/index-range/: r.md  readme.md
doc/vt/ndarray/indexer/: readme.md
doc/vt/ndarray/slice/: begin.md  const-operator.md  constructor.md  data.md  deduction-guides.md  element-count.md  end.md  index-operator.md  rbegin.md  readme.md  rend.md  shape.md  stream-operator.md  strides.md
doc/vt/ndarray/view/: begin.md  const-operator.md  constructor.md  data.md  deduction-guides.md  element-count.md  end.md  flatten.md  index-operator.md  rbegin.md  readme.md  rend.md  reshape.md  shape.md  slice.md  stream-operator.md
include/vt/: ndarray.hpp
include/vt/ndarray/: allocator.hpp  container.hpp  index.hpp  view.hpp
include/vt/ndarray/detail/: bounds.hpp  indexing.hpp  slicing.hpp
include/vt/ndarray/detail/impl/: bounds.ipp  indexing.ipp  slicing.ipp
include/vt/ndarray/impl/: allocator.ipp  container.ipp  index.ipp  view.ipp
test/vt/ndarray/: allocator_test.cpp  container_test.cpp  foreach_benchmark.cpp  index_test.cpp  matrix_mul_benchmark.cpp  test_main.cpp  view_test.cpp
tools/cmake/vt/: Util.cmake
